--- a/index.html
+++ b/index.html
@@ -15,6 +15,40 @@
 
     </head>
     <body>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+            <div class="container">
+                
+                    <a href="index.html" class="navbar-brand" >LOGO</a>
+                    <button class="navbar-toggler" data-toggle="collapse" data-target="#Navbarnav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="Navbarnav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item px-2  "><a href="index.html" class="nav-link active">داشبورد</a></li>
+                            <li class="nav-item px-2 "><a href="posts.html" class="nav-link">پست ها</a></li>
+                            <li class="nav-item px-2 "><a href="categories.html" class="nav-link">دسته بندی</a></li>
+                            <li class="nav-item px-2 "><a href="user.html" class="nav-link">کاربران</a></li>
+
+                        </ul>
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item dropdown ml-3">  
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-user px-2"></i>خوش آمدید</a>
+                                <div class="dropdown-menu" dir="rtl">
+                                    <a href="profile.html" class="dropdwon-item" ><i class="fa fa-user-circle px-2"></i>پروفایل</a>
+                                    <a href="setting.html" class="dropdown-item" ><i class="fa fa-gear px-2 "></i>تنظیمات</a>
+                                </div>
+
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link " href="login.html"><i class="fa fa-user-times"></i>خروج</a>
+                            </li>
+
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+        </nav>
 
     </body>
 
