--- a/index.html
+++ b/index.html
@@ -289,7 +289,35 @@
         </div>
 
         <div class="col-md-3">
+          <div class="card text-center bg-primary text-white mb-3">
+            <div class="card-body">
+              <h3>پست ها</h3>
+            <h1 class="display-4">6<i class="fa fa-pencil"></i></h1>
+            <a href="posts.html" class="btn btn-outline-light btn-sm">نمایش</a>
+
+            </div>
+
+          </div>
+          <div class="card text-center bg-success text-white mb-3">
+            <div class="card-body">
+              <h3> دسته بندی</h3>
+            <h1 class="display-4">4<i class="fa fa-folder-open-o"></i></h1>
+            <a href="categories.html" class="btn btn-outline-light btn-sm">نمایش</a>
+
+            </div>
+
+          </div>
+          <div class="card text-center bg-warning text-white mb-3">
+            <div class="card-body">
+              <h3> کاربران</h3>
+            <h1 class="display-4">2<i class="fa fa-user"></i></h1>
+            <a href="users.html" class="btn btn-outline-light btn-sm">نمایش</a>
+
+            </div>
+
+          </div>
           
+
 
         </div>
 
@@ -298,6 +326,16 @@
     </div>
 
   </section>
+  <footer id="main-footer" class="bg-dark mt-5 p-5 text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p class="lead text-center ">Copyright & Copy</p>
+        </div>
+      </div>
+    </div>
+
+  </footer>
 
 
   
