--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li class="nav-item px-2"><a href="index.html" class="nav-link active">داشبورد</a></li>
           <li class="nav-item px-2"><a href="posts.html" class="nav-link">پست ها</a></li>
           <li class="nav-item px-2"><a href="categories.html" class="nav-link">دسته بندی ها</a></li>
-          <li class="nav-item px-2"><a href="users.html" class="nav-link">کاربران</a></li>
+          <li class="nav-item px-2"><a href="user.html" class="nav-link">کاربران</a></li>
         </ul>
         <ul class="navbar-nav mr-auto">
           <li class="nav-item dropdown ml-3"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
@@ -310,7 +310,7 @@
           <div class="card text-center bg-warning text-white mb-3">
             <div class="card-body">
               <h3> کاربران</h3>
-            <h1 class="display-4">2<i class="fa fa-user"></i></h1>
+            <h1 class="display-4">4<i class="fa fa-user"></i></h1>
             <a href="users.html" class="btn btn-outline-light btn-sm">نمایش</a>
 
             </div>
